Use Images from GitHub Container Registry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - seek-db:/var/lib/postgresql/data
 
   seek:
-    image: knoppiks/nfdi4health-lap-seek:latest
+    image: ghcr.io/knoppiks/n4h-lap-seek:latest
 
     container_name: n4h-lap-seek
     command: docker/entrypoint.sh
@@ -37,7 +37,7 @@ services:
       - seek-solr
 
   seek-workers:
-    image: knoppiks/nfdi4health-lap-seek:latest
+    image: ghcr.io/knoppiks/n4h-lap-seek:latest
     container_name: n4h-lap-seek-workers
     command: docker/start_workers.sh
     restart: always
