Better configuration, added backup/restore samples

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,70 @@
 version: '3.1'
 services:
-  seek-db:
+  db:
     image: mysql:5.7
-    container_name: nfdi4health-ldh-seek-db
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: unless-stopped 
     stop_grace_period: 1m30s
     env_file:
       - docker-compose.env
     volumes:
-      - seek-db:/var/lib/mysql
+      - db:/var/lib/mysql
+    ports:
+      - ${DB_PORT}:3306
 
   seek:
     image: ghcr.io/nfdi4health/ldh
-    container_name: nfdi4health-ldh-seek
     command: docker/entrypoint.sh
     restart: unless-stopped
     environment:
       RAILS_ENV: production
       SOLR_PORT: 8983
-      SOLR_HOST: seek-solr
+      SOLR_HOST: solr
       NO_ENTRYPOINT_WORKERS: 1
     env_file:
       - docker-compose.env
     volumes:
-      - seek-filestore:/seek/filestore
-      - seek-cache:/seek/tmp/cache
+      - filestore:/seek/filestore
+      - cache:/seek/tmp/cache
     ports:
-      - "3000:3000"
+      - ${SEEK_PORT}:3000
     depends_on:
-      - seek-db
-      - seek-solr
+      - db
+      - solr
     links:
-      - seek-db
-      - seek-solr
+      - db
+      - solr
 
-  seek-workers:
+  workers:
     image: ghcr.io/nfdi4health/ldh
-    container_name: nfdi4health-ldh-seek-workers
     command: docker/start_workers.sh
     restart: unless-stopped
     environment:
       RAILS_ENV: production
       SOLR_PORT: 8983
-      SOLR_HOST: seek-solr
+      SOLR_HOST: solr
       RAILS_RELATIVE_URL_ROOT: "/"
     env_file:
       - docker-compose.env
     volumes:
-      - seek-filestore:/seek/filestore
-      - seek-cache:/seek/tmp/cache
+      - filestore:/seek/filestore
+      - cache:/seek/tmp/cache
     depends_on:
-      - seek-db
-      - seek-solr
+      - db
+      - solr
     links:
-      - seek-db
-      - seek-solr
+      - db
+      - solr
 
-  seek-solr:
+  solr:
     image: fairdom/seek-solr:8.11
-    container_name: nfdi4health-ldh-seek-solr
     restart: unless-stopped
     environment:
       SOLR_JAVA_MEM: -Xms512m -Xmx1024m
       GC_TUNE: "-XX:-UseLargePages"
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     volumes:
-      - seek-solr-data:/var/solr/
+      - solr:/var/solr/
     entrypoint:
       - docker-entrypoint.sh
       - solr-precreate
@@ -74,11 +72,14 @@ services:
       - /opt/solr/server/solr/configsets/seek_config      
 
 volumes:
-  seek-filestore:
+  filestore:
+    name: ${COMPOSE_PROJECT_NAME}_filestore
     external: true
-  seek-db:
+  db:
+    name: ${COMPOSE_PROJECT_NAME}_db
     external: true
-  seek-solr-data:
-    external: true
-  seek-cache:
-    external: true
+  solr:
+    external: false
+  cache:
+    external: false
+
