updated to use ghcr.io/nfdi4health/ldh:latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ${DB_PORT}:3306
 
   seek:
-    image: ghcr.io/nfdi4health/ldh
+    image: ghcr.io/nfdi4health/ldh:latest
     command: docker/entrypoint.sh
     restart: unless-stopped
     environment:
@@ -36,7 +36,7 @@ services:
       - solr
 
   workers:
-    image: ghcr.io/nfdi4health/ldh
+    image: ghcr.io/nfdi4health/ldh:latest
     command: docker/start_workers.sh
     restart: unless-stopped
     environment:
