--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
-remote_theme: zendesk/jekyll-theme-zendesk-garden@main
+remote_theme: just-the-docs/just-the-docs
+color_scheme: "dark"
+search_enabled: false
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
