--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,8 @@
 remote_theme: just-the-docs/just-the-docs
 color_scheme: "dark"
 search_enabled: false
+
+logo: "/images/nfdi4health.png"
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
