--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,5 @@
 remote_theme: just-the-docs/just-the-docs
-color_scheme: "dark"
-search_enabled: false
+search_enabled: true
 
 logo: "/images/nfdi4health.png"
 plugins:
