--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: just-the-docs/just-the-docs
-search_enabled: true
+color_scheme: "legacy_light"
+search_enabled: false
 
 logo: "/images/nfdi4health.png"
 plugins:
