--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.1'
 services:
   db:
     image: mysql:5.7
@@ -9,8 +8,6 @@ services:
       - docker-compose.env
     volumes:
       - db:/var/lib/mysql
-    ports:
-      - ${DB_PORT}:3306
 
   seek:
     image: ghcr.io/nfdi4health/ldh:latest
@@ -26,6 +23,7 @@ services:
     volumes:
       - filestore:/seek/filestore
       - cache:/seek/tmp/cache
+      - ${PWD}/${DHO_TERMS}.en.yml:/seek/config/locales/overrides/dho-terms.en.yml
     ports:
       - ${SEEK_PORT}:3000
     depends_on:
