--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     volumes:
       - filestore:/seek/filestore
       - cache:/seek/tmp/cache
-      - ${PWD}/nginx.conf.template:/seek/docker/nginx.conf.template
-      - ${PWD}/${DHO_TERMS:-clinical-trials}.en.yml:/seek/config/locales/overrides/dho-terms.en.yml
+      - ${PWD}/${NGINX_CONF:-nginx.conf.http}:/seek/docker/nginx.conf.template
+      - ${PWD}/${DHO_TERMS:-standard}.en.yml:/seek/config/locales/overrides/dho-terms.en.yml
     ports:
       - ${SEEK_PORT:-3000}:3000
     depends_on:
